--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     />
     <!-- Styles -->
     <link rel="stylesheet" href="./styles.css" />
+    <!-- Scripts -->
+    <script src="dist/main.js"></script>
     <!-- Title -->
     <title>PlatziVideo</title>
   </head>
