add auth. Much secure

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="./styles.css" />
     <!-- Scripts -->
-    <script src="dist/main.js"></script>
+    <script src="dist/bundle.js"></script>
     <!-- Title -->
     <title>PlatziVideo</title>
   </head>
@@ -30,7 +30,7 @@
         </div>
         <ul>
           <li><a href="/">Cuenta</a></li>
-          <li><a href="/">Cerrar Sesión</a></li>
+          <li><a href="/" class="js-logout">Cerrar Sesión</a></li>
         </ul>
       </div>
     </header>
