--- a/login/index.html
+++ b/login/index.html
@@ -11,6 +11,8 @@
     />
     <!-- Styles -->
     <link rel="stylesheet" href="./styles.css" />
+    <!-- Scripts -->
+    <script src="../dist/bundle.js"></script>
     <!-- Title -->
     <title>Inicia Sesión</title>
   </head>
@@ -25,10 +27,10 @@
     <section class="login">
       <section class="login__container">
         <h2>Inicia sesión</h2>
-        <form class="login__container--form">
+        <form class="login__container--form js-login">
           <input class="input" type="text" placeholder="Correo" />
           <input class="input" type="password" placeholder="Contraseña" />
-          <button class="button">Iniciar sesión</button>
+          <button class="submit">Iniciar sesión</button>
           <div class="login__container--remember-me">
             <label>
               <input
