--- a/signup/index.html
+++ b/signup/index.html
@@ -11,6 +11,8 @@
     />
     <!-- Styles -->
     <link rel="stylesheet" href="./styles.css" />
+    <!-- Scripts -->
+    <script src="../dist/bundle.js"></script>
     <!-- Title -->
     <title>Registro</title>
   </head>
@@ -25,11 +27,11 @@
     <section class="register">
       <section class="register__container">
         <h2>Regístrate</h2>
-        <form class="register__container--form">
+        <form class="register__container--form js-login">
           <input class="input" type="text" placeholder="Nombre" />
           <input class="input" type="text" placeholder="Correo" />
           <input class="input" type="password" placeholder="Contraseña" />
-          <button class="button">Registrarme</button>
+          <button class="submit">Registrarme</button>
         </form>
         <a href="">Iniciar sesión</a>
       </section>
