Restore classname to form's button

--- a/login/index.html
+++ b/login/index.html
@@ -28,9 +28,14 @@
       <section class="login__container">
         <h2>Inicia sesión</h2>
         <form class="login__container--form js-login">
-          <input class="input" type="text" placeholder="Correo" />
-          <input class="input" type="password" placeholder="Contraseña" />
-          <button class="submit">Iniciar sesión</button>
+          <input class="input" type="email" placeholder="Correo" required />
+          <input
+            class="input"
+            type="password"
+            placeholder="Contraseña"
+            required
+          />
+          <button class="button" type="submit">Iniciar sesión</button>
           <div class="login__container--remember-me">
             <label>
               <input
