--- a/signup/index.html
+++ b/signup/index.html
@@ -29,9 +29,14 @@
         <h2>Regístrate</h2>
         <form class="register__container--form js-login">
           <input class="input" type="text" placeholder="Nombre" />
-          <input class="input" type="text" placeholder="Correo" />
-          <input class="input" type="password" placeholder="Contraseña" />
-          <button class="submit">Registrarme</button>
+          <input class="input" type="text" placeholder="Correo" required />
+          <input
+            class="input"
+            type="password"
+            placeholder="Contraseña"
+            required
+          />
+          <button class="button" type="submit">Registrarme</button>
         </form>
         <a href="">Iniciar sesión</a>
       </section>
