--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="./styles.css" />
     <!-- Scripts -->
+    <script src="https://unpkg.com/unfetch/polyfill"></script>
     <script src="dist/bundle.js"></script>
     <!-- Title -->
     <title>PlatziVideo</title>
