Load logo using CSS

--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
   </head>
   <body>
     <header class="header">
-      <img
-        class="header__img"
-        src="assets/logo-platzi-video-BW2.png"
-        alt="Platzi Video"
-      />
+      <div class="header__logo"></div>
       <div class="header__menu">
         <div class="header__menu--profile">
           <img src="assets/user-icon.png" alt="" />
