--- a/signup/index.html
+++ b/signup/index.html
@@ -18,11 +18,7 @@
   </head>
   <body>
     <header class="header">
-      <img
-        class="header__img"
-        src="../assets/logo-platzi-video-BW2.png"
-        alt="Platzi Video"
-      />
+      <div class="header__logo"></div>
     </header>
     <section class="register">
       <section class="register__container">
