--- a/login/index.html
+++ b/login/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <!-- Font -->
     <link
-      href="https://fonts.googleapis.com/css?family=Muli&display=swap"
+      href="https://fonts.googleapis.com/css?family=Muli&display=block"
       rel="stylesheet"
     />
     <!-- Styles -->
