Move signup styles to main style file

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <section class="main">
       <h2 class="main__title">¿Qué quieres ver hoy?</h2>
-      <input type="text" class="input" placeholder="Buscar..." />
+      <input type="text" class="search-input" placeholder="Buscar..." />
     </section>
 
     <footer class="footer">
