--- a/login/index.html
+++ b/login/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <!-- Font -->
     <link
       href="https://fonts.googleapis.com/css?family=Muli&display=block"
       rel="stylesheet"
     />
     <!-- Styles -->
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <!-- Scripts -->
     <script src="../dist/bundle.js"></script>
     <!-- Title -->
     <title>Inicia Sesión</title>
   </head>
-  <body>
+  <body class="login-page">
     <header class="header">
       <div class="header__logo"></div>
     </header>
