--- a/login/index.html
+++ b/login/index.html
@@ -13,7 +13,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="/styles.css" />
     <!-- Scripts -->
-    <script src="../dist/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
     <!-- Title -->
     <title>Inicia Sesión</title>
   </head>
@@ -54,7 +54,7 @@
         </section>
         <p class="login__container--register">
           No tienes ninguna cuenta
-          <a href="/signup" title="Regístrate">Regístrate</a>
+          <a href="/register" title="Regístrate">Regístrate</a>
         </p>
       </section>
     </section>
