--- a/register/index.html
+++ b/register/index.html
@@ -11,9 +11,9 @@
       rel="stylesheet"
     />
     <!-- Styles -->
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <!-- Scripts -->
-    <script src="../dist/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
     <!-- Title -->
     <title>Registro</title>
   </head>
