Resolve assets from root

--- a/login/index.html
+++ b/login/index.html
@@ -46,10 +46,10 @@
         </form>
         <section class="login__container--social-media">
           <div>
-            <img src="../assets/google-icon.png" /> Inicia sesión con Google
+            <img src="/assets/google-icon.png" /> Inicia sesión con Google
           </div>
           <div>
-            <img src="../assets/twitter-icon.png" /> Inicia sesión con Twitter
+            <img src="/assets/twitter-icon.png" /> Inicia sesión con Twitter
           </div>
         </section>
         <p class="login__container--register">
