--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <title>PlatziVideo</title>
   </head>
   <body>
-    <header class="header">
-      <div class="header__logo"></div>
-      <div class="header__menu">
-        <div class="header__menu--profile">
+    <header>
+      <div class="logo"></div>
+      <div class="menu">
+        <div>
           <img src="assets/user-icon.png" alt="" />
           <p>Perfil</p>
         </div>
@@ -34,11 +34,11 @@
     </header>
 
     <section class="main">
-      <h2 class="main__title">¿Qué quieres ver hoy?</h2>
+      <h2>¿Qué quieres ver hoy?</h2>
       <input type="text" class="search-input" placeholder="Buscar..." />
     </section>
 
-    <footer class="footer">
+    <footer>
       <a href="/">Terminos de uso</a>
       <a href="/">Declaración de privacidad</a>
       <a href="/">Centro de ayuda</a>
