--- a/register/index.html
+++ b/register/index.html
@@ -18,27 +18,22 @@
     <title>Registro</title>
   </head>
   <body class="register-page">
-    <header class="header">
-      <div class="header__logo"></div>
+    <header>
+      <div class="logo"></div>
     </header>
     <section class="register">
-      <section class="register__container">
+      <section>
         <h2>Regístrate</h2>
-        <form class="register__container--form js-login">
-          <input class="input" type="text" placeholder="Nombre" />
-          <input class="input" type="text" placeholder="Correo" required />
-          <input
-            class="input"
-            type="password"
-            placeholder="Contraseña"
-            required
-          />
-          <button class="button" type="submit">Registrarme</button>
+        <form class="js-login">
+          <input type="text" placeholder="Nombre" />
+          <input type="text" placeholder="Correo" required />
+          <input type="password" placeholder="Contraseña" required />
+          <input type="button" value="Registrarme" />
         </form>
         <a href="">Iniciar sesión</a>
       </section>
     </section>
-    <footer class="footer">
+    <footer>
       <a href="/">Terminos de uso</a>
       <a href="/">Declaración de privacidad</a>
       <a href="/">Centro de ayuda</a>
