--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <!-- Styles -->
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <!-- Scripts -->
     <script src="https://unpkg.com/unfetch/polyfill"></script>
     <script src="dist/bundle.js"></script>
