Go mobile first and decrease desktop style priority

--- a/login/index.html
+++ b/login/index.html
@@ -12,6 +12,11 @@
     />
     <!-- Styles -->
     <link rel="stylesheet" href="/styles.css" />
+    <link
+      media="screen and (min-width: 600px)"
+      rel="stylesheet"
+      href="/desktop.css"
+    />
     <!-- Scripts -->
     <script async src="/dist/bundle.js"></script>
     <!-- Title -->
