--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- Styles -->
     <link rel="stylesheet" href="/styles.css" />
     <!-- Scripts -->
-    <script src="https://unpkg.com/unfetch/polyfill"></script>
-    <script src="dist/bundle.js"></script>
+    <script async src="https://unpkg.com/unfetch/polyfill"></script>
+    <script async src="dist/bundle.js"></script>
     <!-- Title -->
     <title>PlatziVideo</title>
   </head>
