--- a/login/index.html
+++ b/login/index.html
@@ -13,7 +13,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="/styles.css" />
     <!-- Scripts -->
-    <script src="/dist/bundle.js"></script>
+    <script async src="/dist/bundle.js"></script>
     <!-- Title -->
     <title>Inicia Sesión</title>
   </head>
