--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" href="favicon.ico" />
+    <!-- Preconnect and prefetch -->
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com/" />
+    <link rel="preconnect" href="https://kitsu.io/" crossorigin />
+    <link rel="dns-prefetch" href="https://kitsu.io/" />
     <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Muli&display=block"
