--- a/login/index.html
+++ b/login/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" href="/favicon.ico" />
+    <!-- Preconnect and prefetch -->
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com/" />
     <!-- Font -->
     <link
       href="https://fonts.googleapis.com/css?family=Muli&display=block"
