Reduce CSS complexity

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <title>PlatziVideo</title>
   </head>
   <body>
-    <header>
-      <div class="logo"></div>
-      <div class="menu">
-        <div>
+    <header class="header">
+      <div class="header__logo"></div>
+      <div class="header__menu">
+        <div class="header__menu--profile">
           <img src="assets/user-icon.png" alt="" />
           <p>Perfil</p>
         </div>
@@ -43,7 +43,7 @@
     </header>
 
     <section class="main">
-      <h2>¿Qué quieres ver hoy?</h2>
+      <h2 class="main__title">¿Qué quieres ver hoy?</h2>
       <input type="text" class="search-input" placeholder="Buscar..." />
     </section>
 
