Unblock logo's rendering

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="dns-prefetch" href="https://fonts.gstatic.com/" />
     <link rel="preconnect" href="https://kitsu.io/" crossorigin />
     <link rel="dns-prefetch" href="https://kitsu.io/" />
+    <link rel="prefetch" as="image" href="/assets/logo-platzi-video.png" />
     <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Muli&display=block"
@@ -30,7 +31,14 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__logo"></div>
+      <div class="header__logo">
+        <img
+          src="/assets/logo-platzi-video.png"
+          alt="Logo Platzi Video"
+          width="200px"
+          height="61px"
+        />
+      </div>
       <div class="header__menu">
         <div class="header__menu--profile">
           <img src="assets/user-icon.png" alt="" />
