Unblock logo's rendering

--- a/login/index.html
+++ b/login/index.html
@@ -8,6 +8,7 @@
     <!-- Preconnect and prefetch -->
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link rel="dns-prefetch" href="https://fonts.gstatic.com/" />
+    <link rel="prefetch" as="image" href="/assets/logo-platzi-video.png" />
     <!-- Font -->
     <link
       href="https://fonts.googleapis.com/css?family=Muli&display=block"
@@ -27,7 +28,14 @@
   </head>
   <body class="">
     <header class="header header--login">
-      <div class="header__logo"></div>
+      <div class="header__logo">
+        <img
+          src="/assets/logo-platzi-video.png"
+          alt="Logo Platzi Video"
+          width="200px"
+          height="61px"
+        />
+      </div>
     </header>
     <section class="login">
       <section class="login__container">
