Use webfont loader for the font

--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
     <link rel="preconnect" href="https://kitsu.io/" crossorigin />
     <link rel="dns-prefetch" href="https://kitsu.io/" />
     <link rel="prefetch" as="image" href="/assets/logo-platzi-video.png" />
-    <!-- Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Muli&display=block"
-      rel="stylesheet"
-    />
     <!-- Styles -->
     <link rel="stylesheet" href="/styles.css" />
     <link
@@ -75,5 +70,15 @@
         <a href="https://kitsu.io" target="_blank">Kitsu</a>
       </p>
     </footer>
+
+    <!-- Fonts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+      WebFont.load({
+        google: {
+          families: ['Muli'],
+        },
+      })
+    </script>
   </body>
 </html>
