--- a/login/index.html
+++ b/login/index.html
@@ -9,11 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link rel="dns-prefetch" href="https://fonts.gstatic.com/" />
     <link rel="prefetch" as="image" href="/assets/logo-platzi-video.png" />
-    <!-- Font -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Muli&display=block"
-      rel="stylesheet"
-    />
     <!-- Styles -->
     <link rel="stylesheet" href="/styles.css" />
     <link
@@ -79,5 +74,15 @@
       <a href="/">Declaración de privacidad</a>
       <a href="/">Centro de ayuda</a>
     </footer>
+
+    <!-- Fonts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+      WebFont.load({
+        google: {
+          families: ['Muli'],
+        },
+      })
+    </script>
   </body>
 </html>
