Fix form buttons and improve route protection
Much security

--- a/login/index.html
+++ b/login/index.html
@@ -27,7 +27,7 @@
         <form class="js-login">
           <input type="email" placeholder="Correo" required />
           <input type="password" placeholder="Contraseña" required />
-          <input type="button" value="Iniciar sesión" />
+          <input type="submit" value="Iniciar sesión" />
           <div>
             <label>
               <input
