--- a/register/index.html
+++ b/register/index.html
@@ -28,7 +28,7 @@
           <input type="text" placeholder="Nombre" />
           <input type="text" placeholder="Correo" required />
           <input type="password" placeholder="Contraseña" required />
-          <input type="button" value="Registrarme" />
+          <input type="submit" value="Registrarme" />
         </form>
         <a href="">Iniciar sesión</a>
       </section>
