Focus only in the home page.
And adjusts the colophon

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         </div>
         <ul>
           <li><a href="/">Cuenta</a></li>
-          <li><a href="/" class="js-logout">Cerrar Sesión</a></li>
         </ul>
       </div>
     </header>
@@ -39,9 +38,24 @@
     </section>
 
     <footer>
-      <a href="/">Terminos de uso</a>
-      <a href="/">Declaración de privacidad</a>
-      <a href="/">Centro de ayuda</a>
+      <p>
+        Projecto del curso de
+        <a href="https://platzi.com/optimizacion-web" target="_blank"
+          >Optimización Web de Platzi</a
+        >
+        dictado con el
+        <i title="Corazón, como sentimiento, en Japonés">kokoro</i> por
+        <a
+          href="http://twitter.com/jonalvarezz"
+          target="_blank"
+          title="Twitter del profesor Jonathan Alvarez"
+          >@jonalvarezz</a
+        >
+      </p>
+      <p>
+        Los datos e imágenes de Anime provienen de
+        <a href="https://kitsu.io" target="_blank">Kitsu</a>
+      </p>
     </footer>
   </body>
 </html>
