Register page: Add login link

--- a/register/index.html
+++ b/register/index.html
@@ -30,7 +30,7 @@
           <input type="password" placeholder="Contraseña" required />
           <input type="submit" value="Registrarme" />
         </form>
-        <a href="">Iniciar sesión</a>
+        <a href="/login">Iniciar sesión</a>
       </section>
     </section>
     <footer>
