Code split by visitors and logged in users

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <!-- Scripts -->
     <script async src="https://unpkg.com/unfetch/polyfill"></script>
-    <script async src="dist/bundle.js"></script>
+    <script async src="/dist/home.js"></script>
     <!-- Title -->
     <title>PlatziVideo</title>
   </head>
