--- a/login/index.html
+++ b/login/index.html
@@ -17,7 +17,7 @@
       href="/desktop.css"
     />
     <!-- Scripts -->
-    <script async src="/dist/bundle.js"></script>
+    <script async src="/dist/visitors.js"></script>
     <!-- Title -->
     <title>Inicia Sesión</title>
   </head>
