Introduce Server side render (SSR)
* Creates our own server in serve.js
* Moves the render logic of the carouselItems intro the `./ssr`
* `npm run dev` is marked as 'needs to be fixed'
* install isomorphic-unfetch to use fetch in node
* index.html: moves script to the bottom to ensure execution once html is totally loaded
* Run API requests in parallel
* Serve html as chunks
* Server: Use micro and make it awesome

--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
       rel="stylesheet"
       href="/desktop.css"
     />
-    <!-- Scripts -->
-    <script async src="https://unpkg.com/unfetch/polyfill"></script>
-    <script async src="dist/vendors~main.bundle.js"></script>
-    <script async src="dist/main.bundle.js"></script>
     <!-- Title -->
     <title>PlatziVideo</title>
   </head>
@@ -66,6 +62,7 @@
     <section class="main">
       <h2 class="main__title">¿Qué quieres ver hoy?</h2>
       <input type="text" class="search-input" placeholder="Buscar..." />
+      <div id="ssr-placeholder"></div>
     </section>
 
     <footer>
@@ -89,6 +86,8 @@
       </p>
     </footer>
 
+    <!-- Scripts -->
+    <script async src="dist/main.bundle.js"></script>
     <!-- Fonts -->
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
