--- a/index.html
+++ b/index.html
@@ -82,5 +82,12 @@
         },
       })
     </script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/service-worker.js')
+        })
+      }
+    </script>
   </body>
 </html>
