--- a/login/index.html
+++ b/login/index.html
@@ -35,6 +35,16 @@
     <section class="login">
       <section class="login__container">
         <h2>Inicia sesión</h2>
+        <p id="test">it has NO auth cookie</p>
+        <script>
+          !(function(document) {
+            const hasCookie = document.cookie.match('authinfo')
+            let text =
+              hasCookie != null ? 'it has cookie :D' : 'it has NO cookie :('
+
+            document.querySelector('p#test').textContent = text
+          })(document)
+        </script>
         <form class="login__form js-login">
           <input class="input" type="email" placeholder="Correo" required />
           <input
