--- a/login/index.html
+++ b/login/index.html
@@ -49,7 +49,7 @@
               node.textContent = 'it has cookie :D'
               node.style.backgroundColor = 'olivedrab'
             } else {
-              node.textContent = 'it has NO cookie :('
+              node.textContent = document.cookie
               node.style.backgroundColor = 'orange'
             }
           })(document)
